# paraOCR

./: .gitignore  MANIFEST.in  README.md  paraOCR_WebUI.ipynb  powerocr_performance_log.jsonl  pyproject.toml  requirements.txt  results.jsonl  setup.py
src/: Dockerfile.gpu  docker-compose.yml
src/paraocr/: cli.py  config.py  exceptions.py  gpu_worker.py  logger.py  models.py  parallel.py  pdf_processor.py  postprocess.py  processors.py  ui_utils.py  utils.py  webui.py
src/paraocr/ocr_backends/: __init__.py  base.py  easyocr_backend.py  paddleocr_backend.py  tesseract_backend.py  vietocr_backend.py
src/powerocr/: cli.py  config.py  exceptions.py  gpu_worker.py  models.py  parallel.py  pdf_processor.py  processors.py  utils.py
tests/: bench_colab.py  benchmark.md  easyocr_vanilla_bench.py  paddleocr_vanilla_bench.py  tesseract_vanilla_bench.py
